# genomecrypt

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
app/: streamlit_app.py
config/: drugs.yaml  targets.fna
data/demo/: GCA_000417485.1.tsv  demo_set.json  truth.json
data/demo/test_files/: incomplete_assembly.fna
deploy/: Caddyfile  DEPLOY.md  Dockerfile  README-space.md  set-demo-url.sh
deploy/lovable/: GenomeFirewallLanding.jsx
landing/: index.html
models/v19/: ceftriaxone.joblib  ciprofloxacin.joblib  feature_schema.json  gentamicin.joblib  meropenem.joblib  metadata.json  trimethoprim_sulfamethoxazole.joblib
models/v19/eval/: demo_cohort.json  report.json  stability.json
models/v20/: ceftriaxone.joblib  ciprofloxacin.joblib  feature_schema.json  gentamicin.joblib  meropenem.joblib  metadata.json  splits.json  trimethoprim_sulfamethoxazole.joblib
models/v20/eval/: demo_cohort.json  report.json  stability.json
scripts/: acceptance.py  build_demo_set.py  build_targets.py  demo_case.py  demo_set_eval.py  exp_calibration.py  exp_ceiling.py  exp_data_scaling.py  exp_label_noise.py  exp_leakage.py  exp_more_data.py  exp_paired.py  exp_simplicity.py  exp_stability.py  install_tools.sh  public.sh  serve.sh  stress_assembly.py  stress_preprocess.py
src/gfw/: __init__.py  annotate.py  config.py  dedup.py  download_data.py  evaluate.py  explain.py  features.py  gate.py  mechanism.py  merge_sources.py  ncbi_dataset.py  policy.py  predict.py  prepare.py  qc.py  stability.py  storage.py  train.py
tests/: smoke_test.py  test_units.py
