[project]
name = "genome-firewall"
version = "0.1.0"
description = "Defensive AMR prediction from assembled bacterial genomes"
readme = "README.md"
requires-python = ">=3.12"

# Runtime deps for the SERVING path only. Deliberately small: this is everything
# the demo container needs, which is why it runs on any machine.
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "scikit-learn>=1.7",
    "joblib>=1.4",
    "pyyaml>=6.0",
    "pyarrow>=18.0",
    "streamlit>=1.40",
    "plotly>=5.24",      # reliability diagram in the model card
]

[project.optional-dependencies]
# Data prep + training. Not installed in the light app image.
train = [
    "sourmash>=4.8",      # MinHash sketching for homology dedup
    "pyfastx>=2.1",       # fast FASTA iteration
    "matplotlib>=3.9",
    "scipy>=1.14",
]
explain = ["shap>=0.46"]

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8.3"]

[project.scripts]
gfw-download = "gfw.download_data:main"
gfw-prepare = "gfw.prepare:main"
gfw-train = "gfw.train:main"
gfw-evaluate = "gfw.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gfw"]

[tool.uv]
# screed (a sourmash dep) ships an sdist whose setuptools_scm imports
# pkg_resources, removed in setuptools >=81. Constrain the isolated build env.
constraint-dependencies = ["setuptools<81"]

[tool.ruff]
line-length = 100
src = ["src", "app", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
